--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,21 @@
-# Logs
-logs
-*.log
+# Node modules
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Build files
+dist/
+dist-ssr/
+build/
 *.local
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
@@ -23,9 +23,41 @@ dist-ssr
 *.sln
 *.sw?
 
-# Environment variables
+# Environment variables files
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+server/.env
+
+# Logs
+logs/
+*.log
+
+# Testing
+coverage/
+
+# Firebase
+.firebase/
+firebase-debug.log
+ui-debug.log
+
+# Vercel
+.vercel
+
+# Upload files
+uploads/
+server/uploads/
+
+# Cache
+.cache/
+.eslintcache
+.stylelintcache
+
+# Temporary files
+*.tmp
+*.swp
+*.bak
+*.tgz
+.nyc_output/
