--- a/package.json
+++ b/package.json
@@ -10,19 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "2.6.1",
     "aos": "^2.3.4",
     "axios": "^1.8.3",
     "chart.js": "^4.4.8",
     "crypto-js": "^4.2.0",
-    "eslint": "^9.22.0",
+    "date-fns": "4.1.0",
     "firebase": "^11.4.0",
     "framer-motion": "^12.5.0",
+    "lightweight-charts": "5.0.3",
+    "mongodb": "^6.14.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.16.0",
+    "react-redux": "9.2.0",
     "react-router": "^6.20.0",
     "react-router-dom": "^6.20.0",
+    "redux": "5.0.1",
+    "redux-thunk": "3.1.0",
     "tradingview-widget": "^0.0.1",
     "vite": "^6.2.1"
   },
@@ -30,8 +36,15 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.21",
+    "cssnano": "6.1.2",
+    "eslint": "^9.22.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4"
+    "eslint-plugin-react-refresh": "^0.4.4",
+    "postcss": "^8.5.3",
+    "postcss-import": "16.1.0",
+    "postcss-nested": "6.2.0",
+    "tailwindcss": "^4.0.14"
   }
 }
