--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aos": "^2.3.4",
     "axios": "^1.8.3",
     "chart.js": "^4.4.8",
+    "react-chartjs-2": "^3.0.0",
     "crypto-js": "^4.2.0",
     "date-fns": "4.1.0",
     "firebase": "^11.4.0",
