--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "aos": "^2.3.4",
     "axios": "^1.8.3",
     "chart.js": "^4.4.8",
-    "react-chartjs-2": "^3.0.0",
     "crypto-js": "^4.2.0",
     "date-fns": "4.1.0",
     "firebase": "^11.4.0",
@@ -22,6 +21,7 @@
     "lightweight-charts": "5.0.3",
     "mongodb": "^6.14.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "5.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.16.0",
