--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@faker-js/faker": "9.6.0",
+    "@headlessui/react": "2.2.0",
     "@reduxjs/toolkit": "2.6.1",
     "aos": "^2.3.4",
     "axios": "^1.8.3",
