--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aos": "^2.3.4",
     "axios": "^1.8.3",
     "chart.js": "^4.4.8",
+    "country-list": "2.3.0",
     "crypto-js": "^4.2.0",
     "date-fns": "4.1.0",
     "firebase": "^11.4.0",
@@ -25,11 +26,14 @@
     "react": "^18.2.0",
     "react-chartjs-2": "5.3.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "2.5.2",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.16.0",
     "react-redux": "9.2.0",
     "react-router": "^6.20.0",
     "react-router-dom": "^6.20.0",
+    "react-select": "5.10.1",
+    "recharts": "2.15.2",
     "redux": "5.0.1",
     "redux-thunk": "3.1.0",
     "tradingview-widget": "^0.0.1",
