--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "5.3.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "3.1.0",
     "react-hot-toast": "2.5.2",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.16.0",
