--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
     "@headlessui/react": "2.2.0",
     "@reduxjs/toolkit": "2.6.1",
     "aos": "^2.3.4",
-    "axios": "^1.8.3",
+    "axios": "1.8.4",
+    "bufferutil": "4.0.9",
     "chart.js": "^4.4.8",
     "country-list": "2.3.0",
     "crypto-js": "^4.2.0",
     "date-fns": "4.1.0",
+    "decimal.js": "10.5.0",
     "firebase": "^11.4.0",
     "framer-motion": "^12.5.0",
     "lightweight-charts": "5.0.3",
+    "moment": "2.30.1",
     "mongodb": "^6.14.2",
     "react": "^18.2.0",
+    "react-bootstrap": "2.10.9",
     "react-chartjs-2": "5.3.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "3.1.0",
@@ -34,11 +38,14 @@
     "react-router": "^6.20.0",
     "react-router-dom": "^6.20.0",
     "react-select": "5.10.1",
+    "react-virtualized": "9.22.6",
     "recharts": "2.15.2",
     "redux": "5.0.1",
     "redux-thunk": "3.1.0",
     "tradingview-widget": "^0.0.1",
-    "vite": "^6.2.1"
+    "utf-8-validate": "6.0.5",
+    "vite": "^6.2.1",
+    "websocket": "1.0.35"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
