--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-router": "^6.20.0",
     "react-router-dom": "^6.20.0",
     "react-select": "5.10.1",
+    "react-toastify": "11.0.5",
     "react-virtualized": "9.22.6",
     "recharts": "2.15.2",
     "redux": "5.0.1",
