--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "@faker-js/faker": "9.6.0",
+    "@fingerprintjs/fingerprintjs": "4.6.2",
     "@headlessui/react": "2.2.0",
+    "@heroicons/react": "2.2.0",
     "@reduxjs/toolkit": "2.6.1",
     "aos": "^2.3.4",
     "axios": "1.8.4",
+    "browser-detect": "0.2.28",
     "bufferutil": "4.0.9",
     "chart.js": "^4.4.8",
     "country-list": "2.3.0",
@@ -25,7 +28,10 @@
     "decimal.js": "10.5.0",
     "firebase": "^11.4.0",
     "framer-motion": "^12.5.0",
+    "geoip-lite": "1.4.10",
+    "ipaddr.js": "2.2.0",
     "lightweight-charts": "5.0.3",
+    "maxmind": "4.3.25",
     "moment": "2.30.1",
     "mongodb": "^6.14.2",
     "prettier": "3.5.3",
@@ -47,7 +53,9 @@
     "redux": "5.0.1",
     "redux-thunk": "3.1.0",
     "tradingview-widget": "^0.0.1",
+    "ua-parser-js": "2.0.3",
     "utf-8-validate": "6.0.5",
+    "uuid": "11.1.0",
     "vite": "^6.2.1",
     "websocket": "1.0.35"
   },
